# raw2raw

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  raw2rawapp.cc  raw2rawcli.cc
core/: p_reduce.cc  parse.cc  profile.cc  raw2raw.h  reduce.cc  reduce_extra.cc
frontend/: loupe.cc  loupe.h  state.h  state_filetree.cc  state_grid_view.cc  state_infos.cc  state_primary.cc  thumbnail.cc  thumbnail.h
frontend/glad/include/glad/: glad.h
frontend/glad/src/: glad.cc
